replace deprecated sudo with become to align with wpengine pull request

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   connection: local
-  sudo: yes
+  become: yes
 
   roles:
     - common
@@ -14,4 +14,3 @@
     - varnish
     - admin
     - xhprof
-
