--- a/provisioning/wordpress.yml
+++ b/provisioning/wordpress.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   connection: local
-  sudo: yes
+  become: yes
 
   roles:
     # Set up a WordPress endpoint served by HHVM and PHP-FPM.
