specify hhvm repo version, fixes 502 on hhvm test

--- a/provisioning/roles/hhvm/tasks/main.yml
+++ b/provisioning/roles/hhvm/tasks/main.yml
@@ -3,7 +3,7 @@
   apt_key: url=http://dl.hhvm.com/conf/hhvm.gpg.key state=present
 
 - name: Enable HHVM repo
-  apt_repository: repo="deb http://dl.hhvm.com/ubuntu {{ ansible_lsb.codename }} main" state=present
+  apt_repository: repo="deb http://dl.hhvm.com/ubuntu trusty-lts-3.12 main" state=present
 
 - name: Install HHVM
   apt: name=hhvm state=present
