--- a/provisioning/roles/php-fpm/tasks/main.yml
+++ b/provisioning/roles/php-fpm/tasks/main.yml
@@ -22,24 +22,36 @@
   with_items:
     - yaml
 
-#- name: Install PEAR modules
-#  command: pear install {{ item }}
-#  register: pear_result
-#  changed_when: "'already installed' not in pear_result.stdout"
-#  failed_when: "'already installed' not in pear_result.stdout and 'install ok' not in pear_result.stdout"
-#  with_items:
-#    - PHP_CodeSniffer
+- name: Clear PEAR Cache
+  command: pear clear-cache
+  register: pear_result
 
-#- name: Install WordPress code sniffs
-#  git:
-#    repo: https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards.git
-#    dest: /usr/share/php/wpcs
-#    update: yes
-#    accept_hostkey: yes
+- name: PEAR Update Channels
+  command: pear update-channels
+  register: pear_result
 
-#- name: Enable WordPress code sniffs
-#  command: phpcs --config-set installed_paths /usr/share/php/wpcs
-  
+- name: PEAR Upgrade
+  command: pear upgrade
+  register: pear_result
+
+- name: Install PEAR modules
+  command: pear install {{ item }}
+  register: pear_result
+  changed_when: "'already installed' not in pear_result.stdout"
+  failed_when: "'already installed' not in pear_result.stdout and 'install ok' not in pear_result.stdout"
+  with_items:
+    - php_codesniffer
+
+- name: Install WordPress code sniffs
+  git:
+    repo: https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards.git
+    dest: /usr/share/php/wpcs
+    update: yes
+    accept_hostkey: yes
+
+- name: Enable WordPress code sniffs
+  command: phpcs --config-set installed_paths /usr/share/php/wpcs
+
 - name: Register YAML module
   lineinfile: state=present create=yes dest=/etc/php5/mods-available/yaml.ini line="extension=yaml.so" owner=root group=root mode=0644
 
